--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <script src="script.js"></script>
+    <div>
+     <script src="script.js"></script>
+     <h1>hi from my PC</h1>
+    </div>
   </body>
 </html>
